--- a/北京-刘玉静/index.html
+++ b/北京-刘玉静/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 
+<input type="text" placeholder="请输入QQ号" class="qq-input">
+<p class="result"></p>
+
 <script src="js.js"></script>
 </body>
 </html>
