--- a/北京-刘玉静/找不同.html
+++ b/北京-刘玉静/找不同.html
@@ -6,5 +6,15 @@
 </head>
 <body>
 
+<!--<ul>-->
+    <!--<li><img src="image1.png" alt=""></li>-->
+    <!--<li><img src="image2.png" alt=""></li>-->
+    <!--<li><img src="image2.png" alt=""></li>-->
+    <!--<li><img src="image1.png" alt=""></li>-->
+<!--</ul>-->
+
+<!--找到所有正面的元素 判断是否跟点击元素的图片相同-->
+
+<script src="app2.js"></script>
 </body>
 </html>
